--- a/frontend/CSS/tasks.css
+++ b/frontend/CSS/tasks.css
@@ -38,83 +38,91 @@ main {
         display: flex;
         margin-top: 10em;
         flex-direction: column;
-        justify-content: center;
+        justify-content: start;
         align-items: center;
         background-color: white;
         width: 300px;
-        height: 250px;
-        border-radius: 15%;
+        height: 350px;
+        border-radius: 2em;
     }
+
+    .InsideContent {
+        margin-left: 0.8em;
+    }
+
+    .InsideContent input {
+        
+        width: 50%;
+    }
+
+    .InsideContent button {
+        margin: 0;
+        height: fit-content;
+    }
+
+    .InsideContent ul {
+        margin-left: 1.5em;
+    }
+
+
 }
 /*ajuste*/
 @media (min-width: 768px) {  /* Telas maiores */
     #CenterBlock {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: start;
         align-items: center;
         background-color: white;
         width: 600px;
         height: 500px;
         border-radius: 15%;
+
     }
 }
 
-/*CSS FOR LOGIN*/
-#Login{
+
+#CenterBlock header {
+    margin-top: 5px;
+    font-size: 0.8em;
+}
+
+.InsideContent {
     display: flex;
-    align-items: center;
     flex-direction: column;
-    width: 200px;
+    align-items: start;
 }
 
-#Login h1{
-    margin-bottom: 0.5em;
-    font-size: 1.5em;
+
+.InsideContent input {
+    font-size: 15px;
+    margin-top: 2em;
+    padding: 0.5em;
+    border-radius: 0.8em;
+    border: 1px solid gray;
+    margin-right: 0.5em;
 }
 
-#Login input{
-    border-radius: 1em;
-    border: gray solid 0.5px;
-    width: 230px;
+.InsideContent button {
+    padding: 0.7em;
+    border-radius: 0.8em;
+    border: 1px solid gray;
 }
 
-#Login .email {
-    margin-bottom: 1em;
-    padding: 1em;
+.InsideContent button:hover {
+    box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.4);
 }
 
-#Login .pass {
-    margin-bottom: 1.5em;
-    padding: 1em;
-}
-
-.LoginButton {
-    background-color: #02779b;
-    border: none;
-    border-radius: 1em;
-    padding: 0.8em 0.5em;
-    width: 100px;
+.InsideContent button:active {
+    background-color: #0280A6;
     color: white;
+    
 }
 
-.LoginButton:hover {
-    background-color: #015e7a;
+.InsideContent ul {
+    margin-top: 1em;
 }
 
-#Login footer {
-    display: flex;
-    align-items: center;
-    gap: 18px;
-    margin-bottom: 3em;
-}
-
-#Login footer a {
-    width: 107px;
-    text-decoration: none;
-    color: black;
-} 
-
-#Login footer a:hover {
-    color: #015e7a;
+.InsideContent ul li {
+    margin-top: 1em;
 }
