--- a/frontend/CSS/login.css
+++ b/frontend/CSS/login.css
@@ -79,6 +79,27 @@ main {
     width: 230px;
 }
 
+.msg {
+    margin-top: 1.5em;
+    border-radius: 0.2em;
+    padding: 0.5em;
+    width: 80%;
+    color: white;
+    text-align: center;
+    display: none;
+}
+
+.message-erro {
+    background-color: #dc3545;
+    margin-top: 1.5em;
+    border-radius: 0.2em;
+    padding: 0.5em;
+    width: 80%;
+    color: white;
+    text-align: center;
+    display: block;
+}
+
 #Login .email {
     margin-bottom: 1em;
     padding: 1em;
@@ -96,6 +117,7 @@ main {
     padding: 0.8em 0.5em;
     width: 100px;
     color: white;
+    cursor: pointer;
 }
 
 .LoginButton:hover {
